# cpp-project-generator

./: new.py
templates/application/: CMakeLists.txt  version.h.in
templates/imgui_application/: CMakeLists.txt  conanfile.py  config.json  version.h.in
templates/imgui_application/data/: settings.json
templates/imgui_application/src/: app_settings.cpp  app_settings.h  application.cpp  application.h  common_defines.h  common_includes.h  imgui_style.cpp  imgui_style.h  main.cpp  main_frame.cpp  main_frame.h
templates/imgui_application/src/imgui_utils/: imgui_control.h  imgui_dialogs.cpp  imgui_dialogs.h  imgui_file_dialog.cpp  imgui_file_dialog.h  imgui_message_box.cpp  imgui_message_box.h  imgui_toolbar.h  imgui_utilities.cpp  imgui_utilities.h
templates/shared_library/: CMakeLists.txt  conanfile.py  project.info
templates/shared_library/include/: library.h
templates/shared_library/src/: library.cpp
templates/static_library/: CMakeLists.txt
templates/static_library/include/: library.h
templates/static_library/src/: library.cpp
